gen/v25.1/rpk/rpk-security-secret-update.adoc
= rpk security secret update
:description: rpk security secret update

Update an existing secret for your Redpanda Cloud cluster

== Usage

[,bash]
----
rpk security secret update [flags]
----

== Flags

[cols="1m,1a,2a"]
|===
|*Value* |*Type* |*Description*

|-h, --help |- |Help for update.

|--name |string |Name of the secret, must be uppercase and can only contain letters, digits, and underscores.

|--value |string |New secret value of the secret.

|--config |string |Redpanda or rpk config file; default search paths are `/var/lib/redpanda/.config/rpk/rpk.yaml`, `$PWD/redpanda.yaml`, and `/etc/redpanda/redpanda.yaml`.

|-X, --config-opt |stringArray |Override rpk configuration settings; '-X help' for detail or '-X list' for terser detail.

|--profile |string |rpk profile to use.

|-v, --verbose |- |Enable verbose logging.
|===